fix userpaste list and default swagger
